<resources>
    <string name="app_name">Star Grocery</string>
    <string name="button">Get Start</string>
    <string name="getStartbtn">getStartbtn</string>
    <string name="Get_Start">Get Start</string>
    <string name="Login_Manager_btn">Login As a Manager</string>
    <string name="Login_Customer_btn">Login As a Customer</string>
    <string name="Grocery_manager_login">Grocery Manager Login</string>
    <string name="Bakery_manager_login">Bakery Manager Login</string>
    <string name="Primacy_manager_login">Primacy Manager login</string>
    <string name="Grocery_Item">Grocery Item</string>
    <string name="Bakery_Item">Bakery Item</string>
    <string name="Primacy_Item">Primacy Item</string>
    <string name="cust_et_name">Enter Your Name</string>
    <string name="cust_et_email">Enter Your Email Address</string>
    <string name="cust_et_phone">Enter Your Phone Number</string>
    <string name="cust_et_password">Enter Your Password</string>
    <string name="cust_et_confirmPassword">Re-Enter Your Password</string>
    <string name="cust_resiter_btn">Register</string>
    <string name="cust_email">Email</string>
    <string name="cust_pw">Password</string>
    <string name="Cust_login_btn">Login</string>
    <string name="Bakery_manager_email">Email</string>
    <string name="Bakery_manager_pw">Password</string>
    <string name="Bakery_login_btn">Login</string>
    <string name="card_number">Enter Card Number</string>
    <string name="card_holder">Enter Card Holder Name</string>
    <string name="Expiration_Date">Enter Expiration Date</string>
    <string name="cvv">Enter CVV Number</string>
    <string name="pay_btn">Pay Here</string>
</resources>