<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.customer.CustomerDashboardActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/et" />

    <Button
        android:id="@+id/Primacy_Item"
        android:layout_width="183dp"
        android:layout_height="80dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="32dp"
        android:text="@string/Primacy_Item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <Button
        android:id="@+id/Bakery_Item"
        android:layout_width="179dp"
        android:layout_height="75dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="264dp"
        android:text="@string/Bakery_Item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Grocery_Item"
        android:layout_width="179dp"
        android:layout_height="79dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="144dp"
        android:text="@string/Grocery_Item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>